docs(CP-2A): expand checkpoint conclusion